--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ footer {
 </th>
             </tr>
             <tr>
-                <td>Chào em ngày mới, mong em sẽ luôn mỉm cười rạng rỡ và đón nhận mọi điều ngọt ngào nhất trong hôm nay." 🌹✨</td>
+                <td>Chào em ngày mới, mong em sẽ luôn mỉm cười rạng rỡ và đón nhận mọi điều ngọt ngào nhất trong hôm nay. 🌹✨</td>
             </tr>
         </table>
     </div>
@@ -119,9 +119,9 @@ footer {
             if (clickCount === 1) {
                 table.innerHTML = '<tr><th>Tiếp theo đây</th></tr><tr><td>Nếu em đã nhấn vào đây, xin hãy để từng khoảnh khắc này trôi qua thật nhẹ nhàng và lắng đọng, để em cảm nhận được sự ấm áp và tình yêu từ những lời chúc ngọt ngào. Hãy để ngày hôm nay trở thành một chương mới đầy đẹp đẽ trong câu chuyện của chúng ta. 🌷💫</td></tr>';
             } else if (clickCount === 2) {
-                table.innerHTML = '<tr><th>Lời nói cuối</th></tr><tr><td>"Đây là sản phẩm, cũng như tâm huyết mà tôi dành trọn cho em, mong em sẽ cảm nhận được tình cảm chân thành và những điều tốt đẹp mà tôi muốn gửi gắm." 🌹</td></tr>';
+                table.innerHTML = '<tr><th>Lời nói cuối</th></tr><tr><td>Đây là sản phẩm, cũng như tâm huyết mà tôi dành trọn cho em, mong em sẽ cảm nhận được tình cảm chân thành và những điều tốt đẹp mà tôi muốn gửi gắm.🌹</td></tr>';
             } else if (clickCount === 3) {
-                window.location.href = 'tỏ tình.html'; // Thay đường dẫn bạn muốn nhảy tới
+                window.location.href = 'tỏ tình.html'; 
             }
         }
          document.addEventListener("click", function (event) {
